[package]
name = "mat_flitton_fib_py_rust"
version = "0.1.0"
authors = ["Michael Al Tork <michael.altork@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies-pyo3]
version="0.13.2"
features=["extension-module"]

[lib]
name = "mat_flitton_fib_py_rust"
crate-type = ["cdylib"]
